CPP_Classes/CPP_Non-AI.h

extern "C" __declspec(dllexport)
Retina* Retina_Basics_Open(int rows, int cols, int useLogSampling, float samplingFactor)
{
	Retina* cPtr = new Retina(rows, cols, useLogSampling, samplingFactor);
	return cPtr;
}
extern "C" __declspec(dllexport)
int* Retina_Basics_Close(Retina* cPtr)
{
	delete cPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* Retina_Basics_Run(Retina* cPtr, int* bgrPtr, int rows, int cols, int* magno)
{
	cPtr->src = Mat(rows, cols, CV_8UC3, bgrPtr);
	cPtr->Run();
	if (cPtr->useLogSampling)
		memcpy(magno, cPtr->retinaOutput_magno.data, int((rows * cols / (cPtr->samplingFactor * cPtr->samplingFactor))));
	else
		memcpy(magno, cPtr->retinaOutput_magno.data, rows * cols);
	return (int*)cPtr->retinaOutput_parvo.data;
}
extern "C" __declspec(dllexport)
recursiveBilateralFilter* RecursiveBilateralFilter_Open()
{
	recursiveBilateralFilter* cPtr = new recursiveBilateralFilter();
	return cPtr;
}
extern "C" __declspec(dllexport)
int* RecursiveBilateralFilter_Close(recursiveBilateralFilter* cPtr)
{
	delete cPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* RecursiveBilateralFilter_Run(recursiveBilateralFilter* cPtr, int* bgrPtr, int rows, int cols, int recursions)
{
	cPtr->src = Mat(rows, cols, CV_8U, bgrPtr);
	cPtr->recursions = recursions;
	cPtr->RecursiveBilateralFilter_Run();
	return (int*)cPtr->src.data;
}
extern "C" __declspec(dllexport)
Salience* Salience_Open()
{
	Salience* cPtr = new Salience();
	return cPtr;
}
extern "C" __declspec(dllexport)
int* Salience_Close(Salience* cPtr)
{
	delete cPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* Salience_Run(Salience* cPtr, int numScales, int* grayInput, int rows, int cols)
{
	cPtr->numScales = numScales;
	if (cPtr->matsReady == true) if (cPtr->src.rows != rows && cPtr->src.cols != cols) cPtr->allocateMats(rows, cols);
	cPtr->src = Mat(rows, cols, CV_8U, grayInput);
	if (cPtr->matsReady == false) cPtr->allocateMats(rows, cols);
	Mat gray32f = cPtr->calcIntensity();

	normalize(gray32f, gray32f, 0, 255, NORM_MINMAX, CV_32F);
	gray32f.convertTo(cPtr->dst, CV_8U);
	return (int*)cPtr->dst.data;
}
extern "C" __declspec(dllexport)
SimpleProjection* SimpleProjectionOpen()
{
	SimpleProjection* cPtr = new SimpleProjection();
	return cPtr;
}
extern "C" __declspec(dllexport)
void SimpleProjectionClose(SimpleProjection* cPtr)
{
	delete cPtr;
}
extern "C" __declspec(dllexport)
int* SimpleProjectionSide(SimpleProjection* cPtr)
{
	return (int*)cPtr->viewSide.data;
}
extern "C" __declspec(dllexport)
int* SimpleProjectionRun(SimpleProjection* cPtr, int* depthPtr, float desiredMin, float desiredMax, int rows, int cols)
{
	cPtr->depth32f = Mat(rows, cols, CV_32F, depthPtr);
	threshold(cPtr->depth32f, cPtr->mask, 0, 255, ThresholdTypes::THRESH_BINARY);
	convertScaleAbs(cPtr->mask, cPtr->mask);
	cPtr->viewTop = Mat(rows, cols, CV_8U).setTo(255);
	cPtr->viewSide = Mat(rows, cols, CV_8U).setTo(255);
	cPtr->Run(desiredMin, desiredMax, cols, rows);
	return (int*)cPtr->viewTop.data;
}
extern "C" __declspec(dllexport) Sort_MLPrepTest* Sort_MLPrepTest_Open() { Sort_MLPrepTest* cPtr = new Sort_MLPrepTest(); return cPtr; }
extern "C" __declspec(dllexport) int* Sort_MLPrepTest_Close(Sort_MLPrepTest* cPtr) { delete cPtr; return (int*)0; }
extern "C" __declspec(dllexport) int* Sort_MLPrepTest_Run(Sort_MLPrepTest* cPtr, int* grayPtr, int rows, int cols)
{
	cPtr->src = Mat(rows, cols, CV_8U, grayPtr);
	cPtr->Run();
	return (int*)cPtr->dst.data;
}
extern "C" __declspec(dllexport) PlotOpenCV* PlotOpenCV_Open() { PlotOpenCV* cPtr = new PlotOpenCV(); return cPtr; }
extern "C" __declspec(dllexport) void PlotOpenCV_Close(PlotOpenCV* cPtr) { delete cPtr; }
// https://github.com/opencv/opencv_contrib/blob/master/modules/plot/samples/plot_demo.cpp
extern "C" __declspec(dllexport)
int* PlotOpenCV_Run(PlotOpenCV* cPtr, double* inX, double* inY, int len, int rows, int cols)
{
	cPtr->dst.setTo(0);
	cPtr->srcX = Mat(1, len, CV_64F, inX);
	cPtr->srcY = Mat(1, len, CV_64F, inY);
	cPtr->dst = Mat(rows, cols, CV_8UC3);
	cPtr->RunCPP();
	return (int*)cPtr->dst.data;
}
extern "C" __declspec(dllexport)
Random_PatternGenerator* Random_PatternGenerator_Open() {
	Random_PatternGenerator* Random_PatternGeneratorPtr = new Random_PatternGenerator();
	return Random_PatternGeneratorPtr;
}
extern "C" __declspec(dllexport)
int* Random_PatternGenerator_Close(Random_PatternGenerator* rPtr)
{
	delete rPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* Random_PatternGenerator_Run(Random_PatternGenerator* rPtr, int rows, int cols)
{
	randpattern::RandomPatternGenerator generator(cols, rows);
	generator.generatePattern();
	rPtr->pattern = generator.getPattern();
	return (int*)rPtr->pattern.data;
}
extern "C" __declspec(dllexport)
Random_DiscreteDistribution* Random_DiscreteDistribution_Open() {
	Random_DiscreteDistribution* cPtr = new Random_DiscreteDistribution();
	return cPtr;
}
extern "C" __declspec(dllexport)
int* Random_DiscreteDistribution_Close(Random_DiscreteDistribution* cPtr)
{
	delete cPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* Random_DiscreteDistribution_Run(Random_DiscreteDistribution* cPtr, int rows, int cols)
{
	cPtr->discrete = Mat(rows, cols, CV_32F, 0);
	return (int*)cPtr->discrete.data;
}
extern "C" __declspec(dllexport)
RedCloud_FindCells* RedCloud_FindCells_Open() {
	RedCloud_FindCells* cPtr = new RedCloud_FindCells();
	return cPtr;
}
extern "C" __declspec(dllexport)
void RedCloud_FindCells_Close(RedCloud_FindCells* cPtr)
{
	delete cPtr;
}
extern "C" __declspec(dllexport) int RedCloud_FindCells_TotalCount(RedCloud_FindCells* cPtr) { return int(cPtr->cellList.size()); }
extern "C" __declspec(dllexport)
int* RedCloud_FindCells_RunCPP(RedCloud_FindCells* cPtr, int* dataPtr, int rows, int cols)
{
	cPtr->RunCPP(Mat(rows, cols, CV_8UC1, dataPtr));
	if (cPtr->cellList.size() == 0) return 0;
	return (int*)&cPtr->cellList[0];
}
extern "C" __declspec(dllexport)
Pixels_Vector* Pixels_Vector_Open() {
	Pixels_Vector* cPtr = new Pixels_Vector();
	return cPtr;
}
extern "C" __declspec(dllexport)
void Pixels_Vector_Close(Pixels_Vector* cPtr)
{
	delete cPtr;
}
extern "C" __declspec(dllexport) int* Pixels_Vector_Pixels(Pixels_Vector* cPtr)
{
	return (int*)&cPtr->pixelList[0];
}
extern "C" __declspec(dllexport)
int Pixels_Vector_RunCPP(Pixels_Vector* cPtr, int* dataPtr, int rows, int cols)
{
	cPtr->src = Mat(rows, cols, CV_8UC3, dataPtr);
	cPtr->RunCPP();
	return (int)cPtr->pixelList.size();
}
extern "C" __declspec(dllexport) Neighbors* Neighbors_Open() { Neighbors* cPtr = new Neighbors(); return cPtr; }
extern "C" __declspec(dllexport) void Neighbors_Close(Neighbors* cPtr) { delete cPtr; }
extern "C" __declspec(dllexport) int* Neighbors_NabList(Neighbors* cPtr) { return (int*)&cPtr->nabList[0]; }
extern "C" __declspec(dllexport)
int Neighbors_RunCPP(Neighbors* cPtr, int* dataPtr, int rows, int cols)
{
	cPtr->src = Mat(rows, cols, CV_8UC1, dataPtr);
	cPtr->RunCPP();
	return (int)cPtr->nabList.size();
}
extern "C" __declspec(dllexport) RedCloud* RedCloud_Open() { return new RedCloud(); }
extern "C" __declspec(dllexport) int RedCloud_Count(RedCloud* cPtr)
{
	return (int)cPtr->cellRects.size();
}
extern "C" __declspec(dllexport) int* RedCloud_Rects(RedCloud* cPtr)
{
	return (int*)&cPtr->cellRects[0];
}
extern "C" __declspec(dllexport) int* RedCloud_FloodPoints(RedCloud* cPtr)
{
	return (int*)&cPtr->floodPoints[0];
}
extern "C" __declspec(dllexport) int* RedCloud_Close(RedCloud* cPtr) { delete cPtr; return (int*)0; }
extern "C" __declspec(dllexport) int*
RedCloud_Run(RedCloud* cPtr, int* dataPtr, unsigned char* maskPtr, int rows, int cols)
{
	cPtr->src = Mat(rows, cols, CV_8U, dataPtr);

	Mat inputMask = Mat(rows, cols, CV_8U, maskPtr);

	copyMakeBorder(inputMask, inputMask, 1, 1, 1, 1, BORDER_CONSTANT, 0);
	cPtr->RunCPP(inputMask);

	return (int*)cPtr->result.data;
}
extern "C" __declspec(dllexport) RedCloudMaxDist* RedCloudMaxDist_Open() { return new RedCloudMaxDist(); }
extern "C" __declspec(dllexport) int RedCloudMaxDist_Count(RedCloudMaxDist* cPtr)
{
	return (int)cPtr->cellRects.size();
}
extern "C" __declspec(dllexport) int* RedCloudMaxDist_Rects(RedCloudMaxDist* cPtr)
{
	return (int*)&cPtr->cellRects[0];
}
extern "C" __declspec(dllexport) int* RedCloudMaxDist_FloodPoints(RedCloudMaxDist* cPtr)
{
	return (int*)&cPtr->floodPoints[0];
}
extern "C" __declspec(dllexport) void
RedCloudMaxDist_SetPoints(RedCloudMaxDist* cPtr, int count, int* dataPtr)
{
	Mat maxList = Mat(count, 1, CV_32SC2, dataPtr);
	cPtr->maxList.clear();
	for (int i = 0; i < count; i++)
	{
		cPtr->maxList.push_back(maxList.at<Point>(i, 0));
	}
}
extern "C" __declspec(dllexport) int* RedCloudMaxDist_Close(RedCloudMaxDist* cPtr) { delete cPtr; return (int*)0; }
extern "C" __declspec(dllexport) int*
RedCloudMaxDist_Run(RedCloudMaxDist* cPtr, int* dataPtr, unsigned char* maskPtr, int rows, int cols)
{
	cPtr->src = Mat(rows, cols, CV_8U, dataPtr);
	cPtr->mask = Mat::zeros(rows + 2, cols + 2, CV_8U);
	cPtr->mask.setTo(0);
	Rect r = Rect(1, 1, cols, rows);
	if (maskPtr != 0)
	{
		Mat inputMask;
		inputMask = Mat(rows, cols, CV_8U, maskPtr);
		inputMask.copyTo(cPtr->mask(r));
	}
	cPtr->maskCopy = cPtr->mask.clone();
	if (cPtr->maxList.size() > 0)
		cPtr->RunMaxList();
	else
		cPtr->RunCPP();
	cPtr->maskCopy(r).copyTo(cPtr->result);
	return (int*)cPtr->result.data;
}