CS_Classes/CS_Externs.cs


        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SimpleProjectionRun(IntPtr cPtr, IntPtr depth, float desiredMin, float desiredMax, int rows, int cols);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SimpleProjectionSide(IntPtr cPtr);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SimpleProjectionOpen();

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleProjectionClose(IntPtr cPtr);

        public class compareAllowIdenticalDoubleInverted : IComparer<double>
        {
            public int Compare(double a, double b)
            {
                if (a <= b) return 1;
                return -1;
            }
        }

        public class compareAllowIdenticalDouble : IComparer<double>
        {
            public int Compare(double a, double b)
            {
                if (a >= b) return 1;
                return -1;
            }
        }

        public class compareAllowIdenticalSingleInverted : IComparer<float>
        {
            public int Compare(float a, float b)
            {
                if (a <= b) return 1;
                return -1;
            }
        }

        public class compareAllowIdenticalSingle : IComparer<float>
        {
            public int Compare(float a, float b)
            {
                if (a >= b) return 1;
                return -1;
            }
        }

        public class compareAllowIdenticalIntegerInverted : IComparer<int>
        {
            public int Compare(int a, int b)
            {
                if (a <= b) return 1;
                return -1;
            }
        }

        public class compareByte : IComparer<byte>
        {
            public int Compare(byte a, byte b)
            {
                if (a <= b) return -1;
                return 1;
            }
        }

        public class compareAllowIdenticalInteger : IComparer<int>
        {
            public int Compare(int a, int b)
            {
                if (a >= b) return 1;
                return -1;
            }
        }

        public class CompareMaskSize : IComparer<int>
        {
            public int Compare(int a, int b)
            {
                if (a <= b) return 1;
                return -1;
            }
        }

        public int findNearestCentroid(Point detailPoint, List<Point> centroids)
        {
            int minIndex = 0;
            float minDistance = float.MaxValue;
            for (int i = 0; i < centroids.Count; i++)
            {
                Point pt = centroids[i];
                float distance = (float)Math.Sqrt((detailPoint.X - pt.X) * (detailPoint.X - pt.X) + (detailPoint.Y - pt.Y) * (detailPoint.Y - pt.Y));
                if (distance < minDistance)
                {
                    minIndex = i;
                    minDistance = distance;
                }
            }
            return minIndex;
        }

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Random_PatternGenerator_Open();

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Random_PatternGenerator_Close(IntPtr cPtr);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Random_PatternGenerator_Run(IntPtr Random_PatternGeneratorPtr, int rows, int cols);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Random_DiscreteDistribution_Open();

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Random_DiscreteDistribution_Close(IntPtr cPtr);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Random_DiscreteDistribution_Run(IntPtr rPtr, int rows, int cols, int channels);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RecursiveBilateralFilter_Open();

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RecursiveBilateralFilter_Close(IntPtr cPtr);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RecursiveBilateralFilter_Run(IntPtr cPtr, IntPtr inputPtr, int rows, int cols, int recursions);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Neighbors_Open();

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern void Neighbors_Close(IntPtr cPtr);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern int Neighbors_RunCPP(IntPtr cPtr, IntPtr dataPtr, int rows, int cols);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Neighbors_NabList(IntPtr cPtr);
        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RedCloud_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RedCloud_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RedCloud_Rects(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RedCloud_Sizes(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RedCloud_FloodPoints(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int RedCloud_Count(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RedCloud_Run(IntPtr cPtr, IntPtr dataPtr, IntPtr maskPtr, int rows, int cols);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RedCloudMaxDist_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RedCloudMaxDist_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RedCloudMaxDist_Rects(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RedCloudMaxDist_Sizes(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RedCloudMaxDist_FloodPoints(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RedCloudMaxDist_SetPoints(IntPtr cPtr, int count, IntPtr maxList);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int RedCloudMaxDist_Count(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RedCloudMaxDist_Run(IntPtr cPtr, IntPtr dataPtr, IntPtr maskPtr, int rows, int cols);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr PlotOpenCV_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr PlotOpenCV_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr PlotOpenCV_Run(IntPtr cPtr, IntPtr inX, IntPtr inY, int inLen, int rows, int cols);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RedCloud_FindCells_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RedCloud_FindCells_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int RedCloud_FindCells_TotalCount(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RedCloud_FindCells_RunCPP(IntPtr cPtr, IntPtr dataPtr, int rows, int cols);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Pixels_Vector_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Pixels_Vector_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Pixels_Vector_RunCPP(IntPtr cPtr, IntPtr dataPtr, int rows, int cols);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Pixels_Vector_Pixels(IntPtr cPtr);

        public static float shapeCorrelation(List<Point> points)
        {
            Mat pts = new Mat(points.Count, 1, MatType.CV_32SC2, points.ToArray());
            Mat pts32f = new Mat();
            pts.ConvertTo(pts32f, MatType.CV_32FC2);
            Mat[] split = pts32f.Split();
            Mat correlationMat = new Mat();
            Cv2.MatchTemplate(split[0], split[1], correlationMat, TemplateMatchModes.CCoeffNormed);
            return correlationMat.Get<float>(0, 0);
        }

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Retina_Basics_Open(int rows, int cols, bool useLogSampling, float samplingFactor);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Retina_Basics_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Retina_Basics_Run(IntPtr RetinaPtr, IntPtr bgrPtr, int rows, int cols, IntPtr magno, int useLogSampling);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Salience_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Salience_Run(IntPtr classPtr, int numScales, IntPtr grayInput, int rows, int cols);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Salience_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Sort_MLPrepTest_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Sort_MLPrepTest_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Sort_MLPrepTest_Run(IntPtr cPtr, IntPtr bgrPtr, int rows, int cols);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FLess_Range_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int FLess_Range_Count(IntPtr cPtr);
